--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <head> 
 <meta charset="utf-8"> 
-<title>菜鸟教程(runoob.com)</title> 
+<title>Oscar</title> 
 </head>
 <body>
-<p id="demo">点击按钮获取您当前坐标（可能需要比较长的时间获取）：</p>
-<button onclick="getLocation()">点我</button>
+<p id="lat">locating</p>
+<p id="lon"></p>
 <script>
-var x=document.getElementById("demo");
+var x=document.getElementById("lat");
+var y=document.getElementById("lon");	
 function getLocation()
 {
 	if (navigator.geolocation)
@@ -17,15 +18,16 @@ function getLocation()
 	}
 	else
 	{
-		x.innerHTML="该浏览器不支持获取地理位置。";
+		x.innerHTML="can't locate";
 	}
 }
 
 function showPosition(position)
 {
-	x.innerHTML="纬度: " + position.coords.latitude + 
-	"<br>经度: " + position.coords.longitude;	
+	x.innerHTML="lat: " + position.coords.latitude; 
+	y.innerHTML= "lon: " + position.coords.longitude;	
 }
+getLocation()
 </script>
 </body>
 </html>
