--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head> 
 <meta charset="utf-8"> 
-<title>Oscar</title> 
+<title>Your location</title> 
 </head>
 <body>
 <p id="lat">locating</p>
